# splitpkcs12

./: Makefile.am  README  configure.ac  split.c
